Added support for Deleting OBS Studio

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ LeagueDeleter/publish/setup.exe
 .vs/LeagueDelete
 .vs/ProjectEvaluation
 
+LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
