moved verbal instruction to the Killer and cleaned up verbiage

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ LeagueDeleter/publish/setup.exe
 .vs/ProjectEvaluation
 
 LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
+LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
