--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ LeagueDeleter/publish/setup.exe
 
 LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
 LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
+LeagueDeleter/Properties/PublishProfiles/FolderProfile.pubxml.user
